--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "serve",
+  "name": "override-cors-serve",
   "version": "11.3.2",
   "description": "Static file serving and directory listing",
   "scripts": {
@@ -43,7 +43,7 @@
     "chalk": "2.4.1",
     "clipboardy": "1.2.3",
     "compression": "1.7.3",
-    "serve-handler": "6.1.3",
+    "override-cors-serve-handler": "6.1.3",
     "update-check": "1.5.2"
   }
 }
